--- a/9 - advance python/itergendecorsolutions.ipynb
+++ b/9 - advance python/itergendecorsolutions.ipynb
@@ -13,9 +13,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "3\n",
+      "2\n",
+      "1\n",
+      "0\n"
+     ]
+    }
+   ],
    "source": [
     "class Countdown:\n",
     "    def __init__(self, start):\n",
@@ -32,8 +44,8 @@
     "            return self.current\n",
     "\n",
     "# Test\n",
-    "# for number in Countdown(5):\n",
-    "#     print(number)"
+    "for number in Countdown(5):\n",
+    "    print(number)"
    ]
   },
   {
@@ -130,9 +142,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "4\n",
+      "16\n",
+      "36\n",
+      "64\n",
+      "100\n",
+      "144\n",
+      "196\n",
+      "256\n",
+      "324\n",
+      "400\n"
+     ]
+    }
+   ],
    "source": [
     "def even_numbers(limit):\n",
     "    for i in range(limit + 1):\n",
@@ -144,10 +174,10 @@
     "        yield number * number\n",
     "\n",
     "# Test\n",
-    "# even_gen = even_numbers(20)\n",
-    "# square_gen = squares(even_gen)\n",
-    "# for square in square_gen:\n",
-    "#     print(square)"
+    "even_gen = even_numbers(20)\n",
+    "square_gen = squares(even_gen)\n",
+    "for square in square_gen:\n",
+    "    print(square)"
    ]
   },
   {
@@ -161,9 +191,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Execution time: 0.0 seconds\n",
+      "Execution time: 0.0 seconds\n",
+      "Execution time: 0.0 seconds\n",
+      "Execution time: 0.0 seconds\n",
+      "Execution time: 0.0 seconds\n",
+      "Execution time: 0.0 seconds\n",
+      "Execution time: 0.0 seconds\n",
+      "Execution time: 0.0 seconds\n",
+      "Execution time: 0.0 seconds\n",
+      "Execution time: 0.0 seconds\n",
+      "Execution time: 0.0 seconds\n",
+      "3628800\n"
+     ]
+    }
+   ],
    "source": [
     "import time\n",
     "\n",
@@ -184,7 +233,7 @@
     "        return n * factorial(n - 1)\n",
     "\n",
     "# Test\n",
-    "# print(factorial(10))"
+    "print(factorial(10))"
    ]
   },
   {
@@ -427,9 +476,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n"
+     ]
+    }
+   ],
    "source": [
     "class InfiniteCounter:\n",
     "    def __init__(self, start):\n",
@@ -443,9 +509,9 @@
     "        return self.current\n",
     "\n",
     "# Test\n",
-    "# counter = InfiniteCounter(0)\n",
-    "# for _ in range(10):\n",
-    "#     print(next(counter))"
+    "counter = InfiniteCounter(0)\n",
+    "for _ in range(10):\n",
+    "    print(next(counter))"
    ]
   },
   {
@@ -459,9 +525,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-2\n",
+      "-4\n",
+      "-6\n",
+      "-8\n",
+      "-10\n",
+      "-12\n",
+      "-14\n",
+      "-16\n",
+      "-18\n",
+      "-20\n"
+     ]
+    }
+   ],
    "source": [
     "def integers():\n",
     "    for i in range(1, 11):\n",
@@ -476,11 +559,11 @@
     "        yield -number\n",
     "\n",
     "# Test\n",
-    "# int_gen = integers()\n",
-    "# double_gen = doubles(int_gen)\n",
-    "# negative_gen = negatives(double_gen)\n",
-    "# for value in negative_gen:\n",
-    "#     print(value)"
+    "int_gen = integers()\n",
+    "double_gen = doubles(int_gen)\n",
+    "negative_gen = negatives(double_gen)\n",
+    "for value in negative_gen:\n",
+    "    print(value)"
    ]
   }
  ],
@@ -500,7 +583,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
