--- a/9 - advance python/main.ipynb
+++ b/9 - advance python/main.ipynb
@@ -436,13 +436,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "id": "bbc74b22",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Welcome to the advanced python course.'"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def welcome():\n",
-    "    "
+    "    return \"Welcome to the advanced python course.\"\n",
+    "\n",
+    "welcome()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "6a965eb1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<function __main__.welcome()>"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wel = welcome\n",
+    "wel"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "e57eeca1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome to the advanced python course.\n",
+      "Welcome to the advanced python course.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(wel())\n",
+    "\n",
+    "del welcome\n",
+    "\n",
+    "print(wel())"
    ]
   },
   {
@@ -454,11 +512,327 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a6c73743",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def main_welcome():\n",
+    "    message = \"Welcome\"\n",
+    "    def sub_welcome():\n",
+    "        print(\"Welcome to the advanced python course.\")\n",
+    "        print(message)\n",
+    "        print(\"Please learn these concepts properly.\")\n",
+    "    return sub_welcome()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "ca1ff9da",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome to the advanced python course.\n",
+      "Welcome\n",
+      "Please learn these concepts properly.\n"
+     ]
+    }
+   ],
+   "source": [
+    "main_welcome()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "30704e8d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def main_welcome(message):\n",
+    "    def sub_welcome():\n",
+    "        print(\"Welcome to the advanced python course.\")\n",
+    "        print(message)\n",
+    "        print(\"Please learn these concepts properly.\")\n",
+    "    return sub_welcome()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "7126220f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome to the advanced python course.\n",
+      "Andre\n",
+      "Please learn these concepts properly.\n"
+     ]
+    }
+   ],
+   "source": [
+    "main_welcome(\"Andre\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "5150259e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def main_welcome(func):\n",
+    "    def sub_welcome():\n",
+    "        print(\"Welcome to the advanced python course.\")\n",
+    "        func(\"This is print function.\")\n",
+    "        print(\"Please learn these concepts properly.\")\n",
+    "    return sub_welcome()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "1766f827",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome to the advanced python course.\n",
+      "This is print function.\n",
+      "Please learn these concepts properly.\n"
+     ]
+    }
+   ],
+   "source": [
+    "main_welcome(print)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "997d39e9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def main_welcome(func, lst):\n",
+    "    def sub_welcome():\n",
+    "        print(\"Welcome to the advanced python course.\")\n",
+    "        print(func(lst))\n",
+    "        print(\"Please learn these concepts properly.\")\n",
+    "    return sub_welcome()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "c0a3da4f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome to the advanced python course.\n",
+      "5\n",
+      "Please learn these concepts properly.\n"
+     ]
+    }
+   ],
+   "source": [
+    "main_welcome(len, [1, 2, 3, 4, 5])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "197c67e4",
    "metadata": {},
    "source": [
     "## Decorators"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "04195fd9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def main_welcome(func):\n",
+    "    def sub_welcome():\n",
+    "        print(\"Welcome to the advanced python course.\")\n",
+    "        func()\n",
+    "        print(\"Please learn these concepts properly.\")\n",
+    "    return sub_welcome()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "c9743130",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is an advanced python course.\n"
+     ]
+    }
+   ],
+   "source": [
+    "def course_introduction():\n",
+    "    print(\"This is an advanced python course.\")\n",
+    "\n",
+    "course_introduction()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "b08ece76",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome to the advanced python course.\n",
+      "This is an advanced python course.\n",
+      "Please learn these concepts properly.\n"
+     ]
+    }
+   ],
+   "source": [
+    "main_welcome(course_introduction)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d886ca1b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome to the advanced python course.\n",
+      "This is an advanced python course.\n",
+      "Please learn these concepts properly.\n"
+     ]
+    }
+   ],
+   "source": [
+    "@main_welcome\n",
+    "def course_introduction(): ## dikirim sebagai argumen untuk fungsi main_welcome\n",
+    "    print(\"This is an advanced python course.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "0e28e679",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Example 2\n",
+    "def my_decorator(func):\n",
+    "    def wrapper():\n",
+    "        print(\"Something is happening before the function is called.\")\n",
+    "        func()\n",
+    "        print(\"Something is happening after the function is called.\")\n",
+    "    return wrapper"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "db305ac5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@my_decorator\n",
+    "def say_hello():\n",
+    "    print(\"Hello!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "id": "81fa74f5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Something is happening before the function is called.\n",
+      "Hello!\n",
+      "Something is happening after the function is called.\n"
+     ]
+    }
+   ],
+   "source": [
+    "say_hello()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "id": "5bf2fc91",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## decorators with arguments\n",
+    "def repeat(n):\n",
+    "    def decorator(func):\n",
+    "        def wrapper(*args, **kwargs):\n",
+    "            for _ in range(n):\n",
+    "                func(*args, **kwargs)\n",
+    "        return wrapper\n",
+    "    return decorator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "id": "9e735375",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@repeat(3)\n",
+    "def say_hello():\n",
+    "    print(\"Hello\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "id": "3ac58ba3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello\n",
+      "Hello\n",
+      "Hello\n"
+     ]
+    }
+   ],
+   "source": [
+    "say_hello()"
    ]
   }
  ],
