--- a/9 - advance python/itergenerdecorquestions.ipynb
+++ b/9 - advance python/itergenerdecorquestions.ipynb
@@ -69,10 +69,617 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "3\n",
+      "2\n",
+      "1\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Assignment 1\n",
+    "class Countdown:\n",
+    "    def __init__(self, start):\n",
+    "        self.current = start\n",
+    "    \n",
+    "    def __iter__(self):\n",
+    "        return self\n",
+    "    \n",
+    "    def __next__(self):\n",
+    "        if self.current <= 0:\n",
+    "            raise StopIteration\n",
+    "        else:\n",
+    "            self.current -= 1\n",
+    "            return self.current\n",
+    "\n",
+    "for number in Countdown(5):\n",
+    "    print(number)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "a30a5d52",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Assignment 2\n",
+    "class MyRange:\n",
+    "    def __init__(self, start, end):\n",
+    "        self.current = start\n",
+    "        self.end = end\n",
+    "    \n",
+    "    def __iter__(self):\n",
+    "        return self\n",
+    "    \n",
+    "    def __next__(self):\n",
+    "        if self.current >= self.end:\n",
+    "            raise StopIteration\n",
+    "        else:\n",
+    "            self.current += 1\n",
+    "            return self.current - 1\n",
+    "\n",
+    "for i in MyRange(1, 5):\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "20b9557d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "5\n",
+      "8\n",
+      "13\n",
+      "21\n",
+      "34\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Assignment 3\n",
+    "def fibonacci(n):\n",
+    "    a, b = 0, 1\n",
+    "    for _ in range(n):\n",
+    "        yield a\n",
+    "        a, b = b, a + b\n",
+    "\n",
+    "for num in fibonacci(10):\n",
+    "    print(num)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "382d0362",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "4\n",
+      "9\n",
+      "16\n",
+      "25\n",
+      "36\n",
+      "49\n",
+      "64\n",
+      "81\n",
+      "100\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Assignment 4\n",
+    "squares = (x * x for x in range(1, 11))\n",
+    "\n",
+    "for square in squares:\n",
+    "    print(square)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "4e506dee",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "4\n",
+      "16\n",
+      "36\n",
+      "64\n",
+      "100\n",
+      "144\n",
+      "196\n",
+      "256\n",
+      "324\n",
+      "400\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Assignment 5\n",
+    "def squares(even_numbers):\n",
+    "    for num in even_numbers:\n",
+    "        yield num * num\n",
+    "\n",
+    "def even_numbers(limit):\n",
+    "    for i in range(limit + 1):\n",
+    "        if i % 2 == 0:\n",
+    "            yield i\n",
+    "\n",
+    "even_gen = even_numbers(20)\n",
+    "square_gen = squares(even_gen)\n",
+    "for num in square_gen:\n",
+    "    print(num)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "a7a1e8fe",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Execution time: 0.0 seconds.\n",
+      "Execution time: 0.0 seconds.\n",
+      "Execution time: 0.0 seconds.\n",
+      "Execution time: 0.0 seconds.\n",
+      "Execution time: 0.0 seconds.\n",
+      "Execution time: 0.0 seconds.\n",
+      "Execution time: 0.0 seconds.\n",
+      "Execution time: 0.0 seconds.\n",
+      "Execution time: 0.0 seconds.\n",
+      "Execution time: 0.0 seconds.\n",
+      "Execution time: 0.0 seconds.\n",
+      "3628800\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Assignment 6\n",
+    "import time\n",
+    "\n",
+    "def time_it(func):\n",
+    "    def wrapper(*args, **kwargs):\n",
+    "        start_time = time.time()\n",
+    "        result = func(*args, **kwargs)\n",
+    "        end_time = time.time()\n",
+    "        print(f\"Execution time: {end_time - start_time} seconds.\")\n",
+    "        return result\n",
+    "    return wrapper\n",
+    "\n",
+    "@time_it\n",
+    "def factorial(n):\n",
+    "    if n == 0:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return n * factorial(n - 1)\n",
+    "\n",
+    "print(factorial(10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "8dd9190e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello!\n",
+      "Hello!\n",
+      "Hello!\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Assignment 7\n",
+    "def repeat(n):\n",
+    "    def decorator(func):\n",
+    "        def wrapper(*args, **kwargs):\n",
+    "            for _ in range(n):\n",
+    "                func(*args, **kwargs)\n",
+    "        return wrapper\n",
+    "    return decorator\n",
+    "\n",
+    "@repeat(3)\n",
+    "def print_message(message):\n",
+    "    print(message)\n",
+    "\n",
+    "print_message(\"Hello!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "1106194b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HELLO!\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Assignment 8\n",
+    "def uppercase(func):\n",
+    "    def wrapper(*args, **kwargs):\n",
+    "        result = func(*args, **kwargs).upper()\n",
+    "        return result\n",
+    "    return wrapper\n",
+    "\n",
+    "def exclaim(func):\n",
+    "    def wrapper(*args, **kwargs):\n",
+    "        result = func(*args, **kwargs) + \"!\"\n",
+    "        return result\n",
+    "    return wrapper\n",
+    "\n",
+    "@exclaim\n",
+    "@uppercase\n",
+    "def greet():\n",
+    "    return \"hello\"\n",
+    "\n",
+    "print(greet())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "0d277cd8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Database connection created.\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Assignment 9\n",
+    "def singleton(cls):\n",
+    "    instances = {}\n",
+    "    def get_instance(*args, **kwargs):\n",
+    "        if cls not in instances:\n",
+    "            instances[cls] = cls(*args, **kwargs)\n",
+    "        return instances[cls]\n",
+    "    return get_instance\n",
+    "\n",
+    "@singleton\n",
+    "class DatabaseConnection:\n",
+    "    def __init__(self):\n",
+    "        print(\"Database connection created.\")\n",
+    "\n",
+    "db1 = DatabaseConnection()\n",
+    "db2 = DatabaseConnection()\n",
+    "print(db1 is db2)  # True"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
+   "id": "067ccd5c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Database connection created.\n",
+      "Database connection created.\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Assignment 9 (Test)\n",
+    "class DatabaseConnection:\n",
+    "    def __init__(self):\n",
+    "        print(\"Database connection created.\")\n",
+    "\n",
+    "db1 = DatabaseConnection()\n",
+    "db2 = DatabaseConnection()\n",
+    "print(db1 is db2)  # True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "7d7dd2f4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "O\n",
+      "L\n",
+      "L\n",
+      "E\n",
+      "H\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Assignment 10\n",
+    "def uppercase(cls):\n",
+    "    class Wrapped(cls):\n",
+    "        def __init__(self, *args, **kwargs):\n",
+    "            super().__init__(*args, **kwargs)\n",
+    "            self.data = self.data.upper()\n",
+    "    return Wrapped\n",
+    "\n",
+    "@uppercase\n",
+    "class ReverseString:\n",
+    "    def __init__(self, data):\n",
+    "        self.data = data\n",
+    "        self.index = len(data)\n",
+    "    \n",
+    "    def __iter__(self):\n",
+    "        return self\n",
+    "    \n",
+    "    def __next__(self):\n",
+    "        if self.index == 0:\n",
+    "            raise StopIteration\n",
+    "        else:\n",
+    "            self.index -= 1\n",
+    "            return self.data[self.index]\n",
+    "\n",
+    "for char in ReverseString(\"hello\"):\n",
+    "    print(char)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "44c0ee30",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Assignment 11\n",
+    "def counter(start):\n",
+    "    current = start\n",
+    "    while True:\n",
+    "        yield current\n",
+    "        current += 1\n",
+    "\n",
+    "count = counter(1)\n",
+    "for _ in range(10):\n",
+    "    print(next(count))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "6efe8302",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cannot divide by zero.\n",
+      "Cannot divide by zero.\n",
+      "Cannot divide by zero.\n",
+      "Cannot divide by zero.\n",
+      "Cannot divide by zero.\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Assignment 12\n",
+    "def safe_divide(numbers, divisor):\n",
+    "    for number in numbers:\n",
+    "        try:\n",
+    "            yield number / divisor\n",
+    "        except ZeroDivisionError:\n",
+    "            yield \"Cannot divide by zero.\"\n",
+    "\n",
+    "numbers = [2, 4, 6, 8, 10]\n",
+    "for result in safe_divide(numbers, 0):\n",
+    "    print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "e9e60358",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "## Assignment 13\n",
+    "def open_file(file_name, mode):\n",
+    "    def decorator(func):\n",
+    "        def wrapper(*args, **kwargs):\n",
+    "            with open(file_name, mode) as file:\n",
+    "                return func(file, *args, **kwargs)\n",
+    "        return wrapper\n",
+    "    return decorator\n",
+    "\n",
+    "@open_file(\"sample.txt\", \"w\")\n",
+    "def write_to_file(file, text):\n",
+    "    file.write(text)\n",
+    "\n",
+    "write_to_file(\"Hello everyone!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "45f58206",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Assignment 14\n",
+    "class InfiniteCounter:\n",
+    "    def __init__(self, start):\n",
+    "        self.current = start\n",
+    "    \n",
+    "    def __iter__(self):\n",
+    "        return self\n",
+    "    \n",
+    "    def __next__(self):\n",
+    "        self.current += 1\n",
+    "        return self.current - 1\n",
+    "\n",
+    "count = InfiniteCounter(1)\n",
+    "\n",
+    "for _ in range(10):\n",
+    "    print(next(count))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "1e9f3e48",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-2\n",
+      "-4\n",
+      "-6\n",
+      "-8\n",
+      "-10\n",
+      "-12\n",
+      "-14\n",
+      "-16\n",
+      "-18\n",
+      "-20\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Assignment 15\n",
+    "def integers():\n",
+    "    for i in range(1, 11):\n",
+    "        yield i\n",
+    "\n",
+    "def doubles(numbers):\n",
+    "    for num in numbers:\n",
+    "        yield num * 2\n",
+    "\n",
+    "def negatives(doubled_numbers):\n",
+    "    for num in doubled_numbers:\n",
+    "        yield -num\n",
+    "\n",
+    "result = negatives(doubles(integers()))\n",
+    "for num in result:\n",
+    "    print(num)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "dcb74cef",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-2\n",
+      "-4\n",
+      "-6\n",
+      "-8\n",
+      "-10\n",
+      "-12\n",
+      "-14\n",
+      "-16\n",
+      "-18\n",
+      "-20\n"
+     ]
+    }
+   ],
+   "source": [
+    "int_gen = integers()\n",
+    "double_gen = doubles(int_gen)\n",
+    "negative_gen = negatives(double_gen)\n",
+    "for value in negative_gen:\n",
+    "    print(value)"
+   ]
   }
  ],
  "metadata": {
@@ -91,7 +698,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
